# bitslides

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  dist-workspace.toml
.github/: copilot-instructions.md
.github/actions/common/: action.yml
.github/workflows/: checks.yml  crates-io.yml  release-checks.yml  release.yml  test.yml
bitslides/: Cargo.toml
bitslides/src/: cli.rs  config.rs  main.rs
bitslides/src/tests/: mod.rs
bitslides/wix/: main.wxs
bitslideslib/: Cargo.toml
bitslideslib/src/: config.rs  fs.rs  lib.rs  slide.rs  syncjob.rs  tracer.rs  volume.rs
bitslideslib/src/fs/tests/: mod.rs
bitslideslib/src/tests/: common.rs  mod.rs
docs/design/: activity.puml  notify.puml
res/: default.conf
src/: cli.rs  config.rs  fs.rs  lib.rs  main.rs  tests.rs
src/bitslideslib/: config.rs  fs.rs  mod.rs  slide.rs  syncjob.rs  tracer.rs  volume.rs
src/bitslideslib/fs/: tests.rs
src/bitslideslib/fs/tests/: mod.rs
src/bitslideslib/tests/: common.rs  mod.rs
src/tests/: common.rs
test/arena/: README.md  gen.py  test.conf
wix/: main.wxs
