[package]
name = "bitslides"
version = "0.1.0"
edition = "2021"
authors = ["Borja García <debuti@gmail.com>"]
description = "Synchronize volumes on the background"
readme = "README.md"
repository = "https://github.com/debuti/bitslides"
license = "GPLv3"

[dependencies]
# MIT OR Apache-2.0
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["string"] }
dirs = "4.0"
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simplelog = "0.12.2"
# MIT
checksums = "0.9.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
# MIT OR Apache-2.0
pretty_assertions = "1.4.0"
tempfile = "3.14.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.wix]
upgrade-guid = "D4554AC8-4594-4ACC-B132-DDFA5FADEBB1"
path-guid = "4064CD9A-B945-46A5-BA8F-EC297B42726D"
license = false
eula = false
