[workspace]
members = ["bitslides", "bitslideslib"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Borja García <debuti@gmail.com>"]
repository = "https://github.com/debuti/bitslides"
license = "GPL-3.0-only"

[workspace.dependencies]
# MIT OR Apache-2.0
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
simplelog = "0.12"
# MIT
tokio = { version = "1", features = ["full"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
